--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis:
-  mapper-locations: mybaits-mapper/**/*.xml
+  mapper-locations: mybatis-mapper/**/*.xml
   configuration:
     map-underscore-to-camel-case: true
   type-aliases-package: com.flab.simplesharingcar.domain
