--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
       platform: mysql
       mode: always
       schema-locations: classpath:db/${spring.sql.init.platform}/schema.sql
+      data-locations: classpath:db/${spring.sql.init.platform}/data.sql
   datasource:
     url: jdbc:mysql://localhost:3306/sharing_car_test?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
