feat : 회원가입 API, Form 화면 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
+  thymeleaf:
+    suffix: .html
+    cache: false
 
 mybatis:
   mapper-locations: mybatis-mapper/**/*.xml
