--- a/.github/workflows/cicd-test.yml
+++ b/.github/workflows/cicd-test.yml
@@ -22,6 +22,24 @@ jobs:
           distribution: 'temurin'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      # Build
-      - name: Build with Gradle
-        run : ./gradlew clean build -x test
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Docker Login
+        uses: docker/login-action@v3
+        with:
+          username: ${secrets.DOCKER_USERNAME}
+          password: ${secrets.DOCKER_PASSWORD}
+      - name: build and release to DockerHub
+        env:
+          NAME: ${secrets.DOCKER_USERNAME}
+          APP: simple-sharing-car-app
+          run: |
+            docker build -t $NAME/$APP -f ./Dockerfile .
+            docker push $NAME/$APP:latest
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Build the stack
+        run: docker-compose up -d
