--- a/.github/workflows/cicd-test.yml
+++ b/.github/workflows/cicd-test.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Docker Login
         uses: docker/login-action@v2
         with:
-          username: ${secrets.DOCKER_USERNAME}
-          password: ${secrets.DOCKER_PASSWORD}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: build and release to DockerHub
         env:
           NAME: ${secrets.DOCKER_USERNAME}
