--- a/.github/workflows/cicd-test.yml
+++ b/.github/workflows/cicd-test.yml
@@ -22,7 +22,8 @@ jobs:
           distribution: 'temurin'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-
+      - name: Execute Gradle build
+        run: ./gradlew clean build -x test
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Docker Login
