--- a/.github/workflows/cicd-test.yml
+++ b/.github/workflows/cicd-test.yml
@@ -22,6 +22,7 @@ jobs:
           distribution: 'temurin'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+      # Gradle 빌드
       - name: Execute Gradle build
         run: ./gradlew clean build -x test
       - name: Set up Docker Buildx
@@ -31,6 +32,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      # 도커 빌드하고 DockerHub 올리기
       - name: build and release to DockerHub
         env:
           NAME: ${{ secrets.DOCKER_USERNAME }}
@@ -40,7 +42,22 @@ jobs:
           docker push $NAME/$APP:latest
   deploy:
     runs-on: ubuntu-latest
-
+    needs: [build] #Build 된 다음 배포
     steps:
-      - name: Build the stack
-        run: docker-compose up -d
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Docker Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      # Pull 받고 컨테이너 생성
+      - name: Docker Pull and Create
+        env:
+          NAME: ${{ secrets.DOCKER_USERNAME }}
+          APP: simple-sharing-car-app
+          COMPOSE: ./docker-compose.yml
+        run: |
+          docker-compose -f $COMPOSE down --rmi all
+          docker pull $/$APP:latest
+          docker-compose -f $COMPOSE up -d
