--- a/.github/workflows/cicd-test.yml
+++ b/.github/workflows/cicd-test.yml
@@ -19,7 +19,6 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '11'
-          distribution: 'temurin'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       # Gradle 빌드
@@ -44,6 +43,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build] #Build 된 다음 배포
     steps:
+      # 체크아웃
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Docker Login
@@ -56,7 +61,7 @@ jobs:
         env:
           NAME: ${{ secrets.DOCKER_USERNAME }}
           APP: simple-sharing-car-app
-          COMPOSE: docker-compose.yml
+          COMPOSE: /root/docker-compose.yml
         run: |
           docker-compose -f $COMPOSE down --rmi all
           docker pull $/$APP:latest
