--- a/.github/workflows/cicd-test.yml
+++ b/.github/workflows/cicd-test.yml
@@ -41,8 +41,10 @@ jobs:
           docker build -t $NAME/$APP -f ./Dockerfile .
           docker push $NAME/$APP:latest
   deploy:
+
     runs-on: ubuntu-latest
     needs: [build] #Build 된 다음 배포
+
     steps:
       # docker compose upload
       - uses: actions/checkout@v3
@@ -54,7 +56,7 @@ jobs:
           key: ${{ secrets.HOST_PASSWORD }}
           port: 22
           source: "docker-compose.yml"
-          target: "/home/docker/"
+          target: "/root/home/docker/"
       # Pull 받고 컨테이너 생성
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
@@ -65,7 +67,7 @@ jobs:
         with:
           host: ${{ secrets.HOST_IP }}
           username: ${{ secrets.HOST_USER }}
-          key: ${{ secrets.HOST_PASSWORD }}
+          password: ${{ secrets.HOST_PASSWORD }}
           envs: NAME, APP, COMPOSE
           script: |
             docker-compose -f $COMPOSE down --rmi all
