chore : docker 컨테이너 ci/cd 설정

--- a/.github/workflows/docker-ci-cd.yml
+++ b/.github/workflows/docker-ci-cd.yml
@@ -1,8 +1,8 @@
-name: test-cicd
+name: docker-ci-cd
 
 on:
   push:
-    branches: [ "chore/add-ci-cd-pipeline" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
